Add snyk, disable codecov, and fix Resources template

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,8 @@ environment:
     secure: ceER808XvIxTANtUupVIv4DTSErDUfv9V3/4nEEvaFdtI7NfQEYb3RBcvssJroG9
   SNYK_TOKEN:
     secure: 9ff1FZB5xsovfQd4y4aiD+LHCY43z+D/p/kmQMQJEn/YAK22m9UsVJeL/o1GKpaP
-  #CODECOV_TOKEN:
-  #  secure: FmqEfCU7TAhcdyDsRdOmv811QvAK0ttwRPyUrxM4U8nyKS99tZ9EEO4kbROTGuqx
+  CODECOV_TOKEN:
+    secure: FmqEfCU7TAhcdyDsRdOmv811QvAK0ttwRPyUrxM4U8nyKS99tZ9EEO4kbROTGuqx
   SHOULD_DEPLOY: false
   USER_PREFERENCES_TABLE: MarketNewsUserPreferencesTable
 
@@ -38,15 +38,17 @@ install:
       nvm use $(cat .nvmrc)
       npm install --quiet 
       npx serverless --version
-  - sh: |
-      curl -Os https://uploader.codecov.io/latest/linux/codecov
-      chmod +x codecov
+  # TODO Add unit tests and enable Codecov
+  # - sh: |
+  #     curl -Os https://uploader.codecov.io/latest/linux/codecov
+  #     chmod +x codecov
 
 build_script:
-  - sh: |
-      npm run snyk
-      npm run test
-      ./codecov
+  - sh: npx snyk monitor
+  # TODO Add unit tests and enable Codecov
+  # - sh: |
+  #     npm run test
+  #     ./codecov
 
 deploy_script:
   - sh: |
