--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "market-news-api",
-  "version": "1.0.0",
-  "description": "Serverless aws-nodejs-typescript template",
+  "version": "0.1.0",
+  "description": "Resource API for Market News",
   "main": "serverless.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
