--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-# package directories
-node_modules
-jspm_packages
-
-# Serverless directories
 .serverless
-
-# esbuild directories
 .esbuild
-
 .env
+coverage
+node_modules
