--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "description": "Resource API for Market News",
   "main": "serverless.ts",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": ">=16"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.105.0",
@@ -18,16 +16,21 @@
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^28.1.1",
     "@types/node": "^14.14.25",
+    "aws-sdk-client-mock": "^0.6.2",
     "esbuild": "^0.14.11",
+    "jest": "^28.1.1",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "snyk": "^1.947.0",
+    "ts-jest": "^28.0.4",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "engines": {
+    "node": ">=16"
+  }
 }
