--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "esModuleInterop": true,
     "lib": ["ESNext"],
     "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "removeComments": true,
+    "outDir": "lib",
+    "resolveJsonModule": true,
     "sourceMap": true,
     "target": "ES2020",
-    "outDir": "lib"
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
