--- a/package.json
+++ b/package.json
@@ -6,23 +6,34 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
-    "test:watch": "jest --onlyChanged --coverage"
+    "test:watch": "jest --onlyChanged --coverage",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.105.0",
     "@aws-sdk/lib-dynamodb": "^3.105.0",
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "aws-sdk-client-mock": "^0.6.2",
     "esbuild": "^0.14.11",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
     "json-schema-to-ts": "^1.5.0",
+    "prettier": "^2.6.2",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "snyk": "^1.947.0",
