--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,10 @@
     "outDir": "lib",
     "resolveJsonModule": true,
     "sourceMap": true,
-    "target": "ES2020",
+    "target": "ES2020"
   },
   "include": ["src/**/*.ts", "serverless.ts"],
-  "exclude": [
-    "node_modules/**/*",
-    ".serverless/**/*",
-    ".webpack/**/*",
-    "_warmup/**/*",
-    ".vscode/**/*"
-  ],
+  "exclude": ["node_modules/**/*", ".serverless/**/*", ".webpack/**/*", "_warmup/**/*", ".vscode/**/*"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
