Use Finnhub sandbox token in dev

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,10 @@ environment:
   CODECOV_TOKEN:
     secure: if5PxDVYlpTsVImmVuYZSPdZQQV1U+bGAbCh/td7xBW8OhxWQMHW4SRklplHuxgl
   SHOULD_DEPLOY: false
-  # # Finnhub sandbox token
-  # FINNHUB_TOKEN:
-  #   secure: ukfs6y11ugjyliZzgcBrr0+t9XYjD1jHYOs8oysdlVE=
-  # Finnhub prod token
+  # Finnhub sandbox token (fake data for each call)
+  # https://finnhub.io/docs/api/sandbox
   FINNHUB_TOKEN:
-    secure: ugqZWXBJIGE13g3Q41ILL1eaAvwC3ccSv9MbYM8Md/Q=
+    secure: ukfs6y11ugjyliZzgcBrr0+t9XYjD1jHYOs8oysdlVE=
 
 for:
   - branches:
